--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
+    "@vercel/functions": "^1.5.0",
     "axios": "^1.7.7",
     "chrono-node": "^2.7.7",
     "class-variance-authority": "^0.7.0",
@@ -43,6 +44,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "mini-svg-data-uri": "^1.4.4",
+    "nanoid": "^5.0.8",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
