--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.12.7",
     "slugify": "^1.6.6",
